Mappers update. If you pass null to the Many-to-Many mapping method, it will return null