@@ -5,6 +5,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Component
@@ -35,15 +36,15 @@ public class OrderMapper {
     }
 
     public List<OrderResponseDto> toResponseDtoList(List<OrderEntity> entities) {
-        return entities
+        return entities == null ? null : entities
                 .stream()
                 .map(this::toResponseDto)
                 .toList();
     }
 
     public List<OrderEntity> toEntityListFromResponse(List<OrderResponseDto> dtos) {
-        return dtos.stream()
+        return dtos == null ? null : dtos.stream()
                 .map(this::toEntity)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
