@@ -5,6 +5,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Component
@@ -28,15 +29,15 @@ public class PromoCodeMapper {
     }
 
     public List<PromoCodeResponseDto> toResponseDtoList(List<PromoCodeEntity> entities) {
-        return entities
+        return entities == null ? null: entities
                 .stream()
                 .map(this::toResponseDto)
                 .toList();
     }
 
     public List<PromoCodeEntity> toEntityListFromResponse(List<PromoCodeResponseDto> dtos) {
-        return dtos.stream()
+        return dtos == null ? null : dtos.stream()
                 .map(this::toEntity)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
